--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,5 +11,19 @@
   <% end %>
 </ul>
 
+<h3>Comments:</h3>
+<ul>
+  <% @post.comments.each do |comment| %>
+  <li><%= comment.content %></li>
+  <% end %>
+</ul>
+
+<%= form_for(@comment, :url => post_comments_url(@post))do |f| %>
+  <% f.hidden_field :post_id, :value => @post.id%>
+  <%= f.label :content %>:
+  <%= f.text_field :content%><br />
+  <%= f.submit 'Create Comment'%>
+<% end %>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
